--- a/wisdom.html
+++ b/wisdom.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>이번에는 안 비게 보냈읍니다</h1>
+    <div>
+       <span>
+        ID: <input type="text">  
+        </span>
+        <span>
+        Password: <input type="password">
+        </span> 
+        <button>로그인</button>
+    </div>
+    
+    
 </body>
 </html>
