--- a/getData.html
+++ b/getData.html
@@ -6,10 +6,9 @@
     <title>New Intro</title>
 </head>
 <body>
-    <h1>INTRO:: Hello, World!</h1>
     <form action="GET">
         <input type="text">
-        <button type="sumbit"></button>
+        <button type="sumbit">조회</button>
     </form>
 </body>
 </html>
